--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.github.santalu:maskara:1.0.0'
+    implementation 'androidx.biometric:biometric:1.1.0'
+
 }
