--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Oct 20 15:12:24 IST 2021
-sdk.dir=F\:\\Android\\Sdk
+sdk.dir=C\:\\Users\\Ideyalabs\\AppData\\Local\\Android\\Sdk
