--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
     implementation 'com.github.santalu:maskara:1.0.0'
     implementation 'androidx.biometric:biometric:1.1.0'
 
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.1'
+
 }
