--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".view.SignupSuccess"
+            android:exported="true" />
+        <activity
             android:name=".view.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
