--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,14 +30,22 @@ android {
         uat {
             buildConfigField 'String', 'URL_PRODUCTION', '\"https://api.coyni.com/\"'
             buildConfigField 'String', 'Referer', '\"https://members.coyni.com\"'
+            buildConfigField 'String', 'Country_Code', '\"US\"'
         }
         sat {
             buildConfigField 'String', 'URL_PRODUCTION', '\"https://api-stg.coyni.com/\"'
             buildConfigField 'String', 'Referer', '\"https://members.coyni.com\"'
+            buildConfigField 'String', 'Country_Code', '\"US\"'
         }
         qa {
             buildConfigField 'String', 'URL_PRODUCTION', '\"http://3.94.123.86:9001/\"'
             buildConfigField 'String', 'Referer', '\"http://mobile/\"'
+            buildConfigField 'String', 'Country_Code', '\"US\"'
+        }
+        dev {
+            buildConfigField 'String', 'URL_PRODUCTION', '\"http://18.234.239.29:9001/\"'
+            buildConfigField 'String', 'Referer', '\"http://mobile/\"'
+            buildConfigField 'String', 'Country_Code', '\"IN\"'
         }
     }
     lintOptions {
@@ -88,4 +96,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.1'
 
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
 }
