--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,5 +87,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.1'
+    implementation 'com.github.angads25:toggle:1.1.0'
 
 }
