--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
         qa {
             buildConfigField 'String', 'URL_PRODUCTION', '\"http://3.94.123.86:9001/\"'
             buildConfigField 'String', 'Referer', '\"http://mobile/\"'
-            buildConfigField 'String', 'Country_Code', '\"IN\"'
+            buildConfigField 'String', 'Country_Code', '\"US\"'
         }
         dev {
             buildConfigField 'String', 'URL_PRODUCTION', '\"http://18.234.239.29:9001/\"'
