--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-
+            testCoverageEnabled true
         }
     }
     flavorDimensions "default"
@@ -70,6 +70,7 @@ android {
             enableSplit = true
         }
     }
+
 }
 
 dependencies {
