--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        releaseSigningConfig {
+            storeFile rootProject.file("app/keystore.jks")
+            storePassword System.getProperty("Coyni@1")
+            keyAlias System.getProperty("alias_name")
+            keyPassword System.getProperty("Coyni@1")
+        }
+    }
     compileSdk 30
 
     defaultConfig {
@@ -19,6 +27,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.releaseSigningConfig
         }
         debug {
 
