--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         <activity
             android:name=".view.EditEmailActivity"
             android:exported="true"
+            android:screenOrientation="portrait"/>
+            android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
             android:windowSoftInputMode="adjustResize"
             android:screenOrientation="portrait"/>
@@ -41,7 +43,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".view.AccountLimitsActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".view.BindingLayoutActivity"
             android:exported="false"
@@ -54,7 +57,8 @@
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".view.LoginActivity"
-            android:windowSoftInputMode="adjustResize" />
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".view.PINActivity"
             android:exported="true"
