New Login flow and Password eye icon change

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".view.AuthLoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".view.IdVeAdditionalActionActivity"
             android:exported="true"
