--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,10 +96,11 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.1'
-    implementation 'com.github.angads25:toggle:1.1.0'
 
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
